# rdmo-plugins

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
exports/: datacite.py  madmp.py  radar.py
imports/: datacite.py  madmp.py  radar.py
rdmo_plugins/: __init__.py
rdmo_plugins/exports/: datacite.py  madmp.py  radar.py  ro-crate.py  rocrate.py  zenodo.py
rdmo_plugins/exports/radar/: __init__.py  exports.py  mixins.py  providers.py  renderers.py
rdmo_plugins/exports/rocrate/: README.md  default.toml  requirements.txt  rocrate.py
rdmo_plugins/imports/: datacite.py  madmp.py  radar.py
rdmo_plugins/optionsets/: re3data.py
rdmo_plugins/templates/plugins/: exports_radar.html  exports_rocrate.html  exports_zenodo.html
rdmo_plugins/xml/domain/: radar.xml
