[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "rdmo-plugins"
description = "Import and export plugins for RDMO."
readme = "README.md"
keywords = [
  "data management plan",
  "dmp",
  "rdmo",
  "research data",
  "research data management",
]
license = {text = "Apache-2.0"}
authors = [
  {name = "RDMO Arbeitsgemeinschaft", email = "rdmo-team@listserv.dfn.de"},
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "rdmo"
]

[project.optional-dependencies]
ci = [
  "rdmo-plugins[dev]",
]
dev = [
  "pre-commit~=3.5",
  "rdmo[allauth]",
  "rdmo-plugins[pytest]",
]

[project.urls]
documentation = "https://rdmo.readthedocs.io/en/latest/plugins/"
homepage = "https://rdmorganiser.github.io"
issues = "https://github.com/rdmorganiser/rdmo-plugins/issues"
repository = "https://github.com/rdmorganiser/rdmo-plugins.git"
slack = "https://rdmo.slack.com"

[tool.setuptools.packages.find]
include = ["rdmo_plugins*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "rdmo_plugins.__version__"}

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "E501",   # line-too-long
  "RUF012", # mutable-class-default
]

[tool.ruff.isort]
known-first-party = ["rdmo_plugins"]
section-order = [
  "future",
  "standard-library",
  "pytest",
  "django",
  "rdmo",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.isort.sections]
pytest = ["pytest"]
django = ["django"]
rdmo = ["rdmo"]
